Update serve cloud run deploy

--- a/ray-serve/e2e/tutorial.ipynb
+++ b/ray-serve/e2e/tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "widespread-click",
+   "id": "virgin-bailey",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "packed-cursor",
+   "id": "incoming-ebony",
    "metadata": {},
    "source": [
     "[Open in colab](https://colab.research.google.com/github/anyscale/academy/blob/main/ray-serve/e2e/tutorial.ipynb)"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "optical-hostel",
+   "id": "starting-huntington",
    "metadata": {},
    "source": [
     "# Model Deployment with Ray Serve: Introduction\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "straight-conflict",
+   "id": "productive-niagara",
    "metadata": {},
    "source": [
     "# 1 Landscape of ML Tools\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ignored-geology",
+   "id": "placed-marriage",
    "metadata": {},
    "source": [
     "# 2 Model Serving with Ray Serve\n",
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "stone-northeast",
+   "id": "increasing-affair",
    "metadata": {
     "hide-output": false
    },
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "intensive-germany",
+   "id": "graphic-blowing",
    "metadata": {},
    "source": [
     "For this tutorial, we’ll use [HuggingFace’s SummarizationPipeline](https://huggingface.co/docs/transformers/main_classes/pipelines#transformers.SummarizationPipeline)\n",
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "considered-youth",
+   "id": "associate-passport",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "nutritional-tooth",
+   "id": "maritime-gossip",
    "metadata": {},
    "source": [
     "## Example Model\n",
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "happy-dynamics",
+   "id": "further-suffering",
    "metadata": {
     "hide-output": false
    },
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "assigned-stationery",
+   "id": "soviet-mississippi",
    "metadata": {},
    "source": [
     "The Python file, called `local_model.py`, uses the `summarize` function to\n",
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "immediate-macedonia",
+   "id": "legitimate-southeast",
    "metadata": {},
    "source": [
     "Keep in mind that the `SummarizationPipeline` is an example machine learning\n",
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "domestic-cheese",
+   "id": "raising-battlefield",
    "metadata": {},
    "source": [
     "## Converting to Ray Serve Deployment\n",
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "mexican-atlanta",
+   "id": "backed-massage",
    "metadata": {
     "hide-output": false
    },
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "enormous-income",
+   "id": "nutritional-strain",
    "metadata": {},
    "source": [
     "After these imports, we can include our model code from above.\n",
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "bright-holmes",
+   "id": "worse-found",
    "metadata": {
     "hide-output": false
    },
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "personalized-attachment",
+   "id": "middle-malaysia",
    "metadata": {},
    "source": [
     "Ray Serve needs to run on top of a Ray cluster, so we create a local one.\n",
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "genuine-effort",
+   "id": "offshore-research",
    "metadata": {
     "hide-output": false
    },
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "about-toner",
+   "id": "sunrise-retail",
    "metadata": {
     "hide-output": false
    },
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "documented-coverage",
+   "id": "tired-breach",
    "metadata": {},
    "source": [
     "Now that we have defined our `summarize` function, connected to a Ray\n",
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "harmful-thriller",
+   "id": "alpha-protocol",
    "metadata": {
     "hide-output": false
    },
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "resident-subject",
+   "id": "given-forwarding",
    "metadata": {},
    "source": [
     "- In line 1, we add the decorator `@serve.deployment`\n",
@@ -426,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "mature-radical",
+   "id": "automated-vault",
    "metadata": {
     "hide-output": false
    },
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "retired-sheep",
+   "id": "hired-fraud",
    "metadata": {},
    "source": [
     "Once we deploy `router`, we can query the model over HTTP."
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "brown-first",
+   "id": "japanese-stockholm",
    "metadata": {},
    "source": [
     "## Testing the Ray Serve Deployment\n",
@@ -488,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "looking-preliminary",
+   "id": "increased-poland",
    "metadata": {
     "hide-output": false
    },
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "caring-investigation",
+   "id": "molecular-position",
    "metadata": {},
    "source": [
     "## Using Classes in the Ray Serve Deployment\n",
@@ -561,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "civic-tenant",
+   "id": "corrected-headquarters",
    "metadata": {
     "hide-output": false
    },
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adult-sight",
+   "id": "numerous-maximum",
    "metadata": {},
    "source": [
     "In this configuration, we can query the `Summarizer` class directly.\n",
@@ -627,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "residential-maria",
+   "id": "architectural-difference",
    "metadata": {
     "hide-output": false
    },
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "above-removal",
+   "id": "laden-liberia",
    "metadata": {},
    "source": [
     "## Adding Functionality with FastAPI\n",
@@ -684,7 +684,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "assured-coordinate",
+   "id": "opponent-quality",
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "surprised-sweden",
+   "id": "furnished-vacuum",
    "metadata": {
     "hide-output": false
    },
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "micro-oakland",
+   "id": "ancient-egyptian",
    "metadata": {},
    "source": [
     "The class now exposes the same route but with the following feature:\n",
@@ -782,7 +782,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "decimal-british",
+   "id": "right-things",
    "metadata": {
     "hide-output": false
    },
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "democratic-cooperative",
+   "id": "medieval-giving",
    "metadata": {},
    "source": [
     "Congratulations! You just built and deployed a machine learning model on Ray\n",
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "enormous-cement",
+   "id": "brown-puppy",
    "metadata": {},
    "source": [
     "# 3 Deploying to Cloud Endpoint\n",
@@ -838,12 +838,16 @@
     "- For production deployment, use [Kubernetes with Ray operator](https://docs.ray.io/en/latest/serve/deployment.html#deploying-on-kubernetes) or hosted provider like [Anyscale](anysclae.com).\n",
     "\n",
     "### Cloud Run Example\n",
-    "You can take a look at the "
+    "You can take a look at the [example directory](https://github.com/anyscale/academy/tree/main/ray-serve/e2e/deploy) for a complete example containerizing the application and deploy to Google Coud Run. It contains\n",
+    "- `deploy.py` for the application.\n",
+    "- `test-query.py` for calling the application as a client.\n",
+    "- `requirements.txt` for Python dependencies.\n",
+    "- `Dockerfile` for describing how to containerize the application and make it runnable as docker containers."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "alleged-consortium",
+   "id": "preceding-geneva",
    "metadata": {},
    "source": [
     "# 4 Bonus: Real World Model Composition\n",
@@ -857,7 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "noted-currency",
+   "id": "persistent-start",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -865,7 +869,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fifty-apartment",
+   "id": "residential-advice",
    "metadata": {},
    "outputs": [],
    "source": []
