--- a/ray-serve/e2e/tutorial.ipynb
+++ b/ray-serve/e2e/tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "virgin-bailey",
+   "id": "aging-patch",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "incoming-ebony",
+   "id": "southern-arthur",
    "metadata": {},
    "source": [
     "[Open in colab](https://colab.research.google.com/github/anyscale/academy/blob/main/ray-serve/e2e/tutorial.ipynb)"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "starting-huntington",
+   "id": "desirable-possibility",
    "metadata": {},
    "source": [
     "# Model Deployment with Ray Serve: Introduction\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "productive-niagara",
+   "id": "interim-transcript",
    "metadata": {},
    "source": [
     "# 1 Landscape of ML Tools\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "placed-marriage",
+   "id": "recovered-management",
    "metadata": {},
    "source": [
     "# 2 Model Serving with Ray Serve\n",
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "increasing-affair",
+   "id": "different-dinner",
    "metadata": {
     "hide-output": false
    },
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "graphic-blowing",
+   "id": "nuclear-literacy",
    "metadata": {},
    "source": [
     "For this tutorial, we’ll use [HuggingFace’s SummarizationPipeline](https://huggingface.co/docs/transformers/main_classes/pipelines#transformers.SummarizationPipeline)\n",
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "associate-passport",
+   "id": "classified-gambling",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "maritime-gossip",
+   "id": "sorted-theater",
    "metadata": {},
    "source": [
     "## Example Model\n",
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "further-suffering",
+   "id": "removed-blast",
    "metadata": {
     "hide-output": false
    },
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "soviet-mississippi",
+   "id": "corporate-element",
    "metadata": {},
    "source": [
     "The Python file, called `local_model.py`, uses the `summarize` function to\n",
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "legitimate-southeast",
+   "id": "accomplished-disposition",
    "metadata": {},
    "source": [
     "Keep in mind that the `SummarizationPipeline` is an example machine learning\n",
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "raising-battlefield",
+   "id": "committed-awareness",
    "metadata": {},
    "source": [
     "## Converting to Ray Serve Deployment\n",
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "backed-massage",
+   "id": "worth-criminal",
    "metadata": {
     "hide-output": false
    },
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "nutritional-strain",
+   "id": "mechanical-greene",
    "metadata": {},
    "source": [
     "After these imports, we can include our model code from above.\n",
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "worse-found",
+   "id": "plastic-probe",
    "metadata": {
     "hide-output": false
    },
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "middle-malaysia",
+   "id": "flying-robin",
    "metadata": {},
    "source": [
     "Ray Serve needs to run on top of a Ray cluster, so we create a local one.\n",
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "offshore-research",
+   "id": "short-marking",
    "metadata": {
     "hide-output": false
    },
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "sunrise-retail",
+   "id": "appointed-farming",
    "metadata": {
     "hide-output": false
    },
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "tired-breach",
+   "id": "stuck-motel",
    "metadata": {},
    "source": [
     "Now that we have defined our `summarize` function, connected to a Ray\n",
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "alpha-protocol",
+   "id": "furnished-option",
    "metadata": {
     "hide-output": false
    },
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "given-forwarding",
+   "id": "social-kitty",
    "metadata": {},
    "source": [
     "- In line 1, we add the decorator `@serve.deployment`\n",
@@ -426,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "automated-vault",
+   "id": "duplicate-tolerance",
    "metadata": {
     "hide-output": false
    },
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hired-fraud",
+   "id": "chubby-potato",
    "metadata": {},
    "source": [
     "Once we deploy `router`, we can query the model over HTTP."
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "japanese-stockholm",
+   "id": "special-leader",
    "metadata": {},
    "source": [
     "## Testing the Ray Serve Deployment\n",
@@ -488,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "increased-poland",
+   "id": "latest-sociology",
    "metadata": {
     "hide-output": false
    },
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "molecular-position",
+   "id": "deadly-gates",
    "metadata": {},
    "source": [
     "## Using Classes in the Ray Serve Deployment\n",
@@ -561,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "corrected-headquarters",
+   "id": "immediate-attempt",
    "metadata": {
     "hide-output": false
    },
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "numerous-maximum",
+   "id": "oriented-boring",
    "metadata": {},
    "source": [
     "In this configuration, we can query the `Summarizer` class directly.\n",
@@ -627,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "architectural-difference",
+   "id": "serious-invite",
    "metadata": {
     "hide-output": false
    },
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "laden-liberia",
+   "id": "swedish-breath",
    "metadata": {},
    "source": [
     "## Adding Functionality with FastAPI\n",
@@ -684,7 +684,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "opponent-quality",
+   "id": "incorrect-intention",
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "furnished-vacuum",
+   "id": "maritime-amount",
    "metadata": {
     "hide-output": false
    },
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ancient-egyptian",
+   "id": "fluid-testing",
    "metadata": {},
    "source": [
     "The class now exposes the same route but with the following feature:\n",
@@ -782,7 +782,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "right-things",
+   "id": "efficient-stationery",
    "metadata": {
     "hide-output": false
    },
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "medieval-giving",
+   "id": "hourly-place",
    "metadata": {},
    "source": [
     "Congratulations! You just built and deployed a machine learning model on Ray\n",
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "brown-puppy",
+   "id": "ideal-brain",
    "metadata": {},
    "source": [
     "# 3 Deploying to Cloud Endpoint\n",
@@ -838,16 +838,19 @@
     "- For production deployment, use [Kubernetes with Ray operator](https://docs.ray.io/en/latest/serve/deployment.html#deploying-on-kubernetes) or hosted provider like [Anyscale](anysclae.com).\n",
     "\n",
     "### Cloud Run Example\n",
-    "You can take a look at the [example directory](https://github.com/anyscale/academy/tree/main/ray-serve/e2e/deploy) for a complete example containerizing the application and deploy to Google Coud Run. It contains\n",
+    "You can take a look at the [example directory](https://github.com/anyscale/academy/tree/main/ray-serve/e2e/deploy-cloud-run) for a complete example containerizing the application and deploy to Google Coud Run. It contains\n",
     "- `deploy.py` for the application.\n",
     "- `test-query.py` for calling the application as a client.\n",
     "- `requirements.txt` for Python dependencies.\n",
-    "- `Dockerfile` for describing how to containerize the application and make it runnable as docker containers."
+    "- `Dockerfile` for describing how to containerize the application and make it runnable as docker containers.\n",
+    "\n",
+    "### Anyscale Example\n",
+    "For deploying to Anyscale hosted service, all you need is to change set the environment variable `RAY_ADDRESS=\"anyscale://your-cluster-name` or use [production services construct](https://docs.anyscale.com/user-guide/run-and-monitor/production-services). You do need an invite at the moment though. \n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "preceding-geneva",
+   "id": "prepared-going",
    "metadata": {},
    "source": [
     "# 4 Bonus: Real World Model Composition\n",
@@ -861,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "persistent-start",
+   "id": "fancy-perfume",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -869,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "residential-advice",
+   "id": "specified-reform",
    "metadata": {},
    "outputs": [],
    "source": []
