--- a/ray-serve/e2e/tutorial.ipynb
+++ b/ray-serve/e2e/tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "aging-patch",
+   "id": "warming-operation",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "southern-arthur",
+   "id": "domestic-washington",
    "metadata": {},
    "source": [
     "[Open in colab](https://colab.research.google.com/github/anyscale/academy/blob/main/ray-serve/e2e/tutorial.ipynb)"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "desirable-possibility",
+   "id": "international-jefferson",
    "metadata": {},
    "source": [
     "# Model Deployment with Ray Serve: Introduction\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "interim-transcript",
+   "id": "structural-garlic",
    "metadata": {},
    "source": [
     "# 1 Landscape of ML Tools\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "recovered-management",
+   "id": "liquid-suggestion",
    "metadata": {},
    "source": [
     "# 2 Model Serving with Ray Serve\n",
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "different-dinner",
+   "id": "wanted-omega",
    "metadata": {
     "hide-output": false
    },
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "nuclear-literacy",
+   "id": "hourly-return",
    "metadata": {},
    "source": [
     "For this tutorial, we’ll use [HuggingFace’s SummarizationPipeline](https://huggingface.co/docs/transformers/main_classes/pipelines#transformers.SummarizationPipeline)\n",
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "classified-gambling",
+   "id": "worthy-solution",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sorted-theater",
+   "id": "hollywood-music",
    "metadata": {},
    "source": [
     "## Example Model\n",
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "removed-blast",
+   "id": "exposed-chess",
    "metadata": {
     "hide-output": false
    },
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "corporate-element",
+   "id": "frank-large",
    "metadata": {},
    "source": [
     "The Python file, called `local_model.py`, uses the `summarize` function to\n",
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accomplished-disposition",
+   "id": "equipped-drunk",
    "metadata": {},
    "source": [
     "Keep in mind that the `SummarizationPipeline` is an example machine learning\n",
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "committed-awareness",
+   "id": "efficient-colon",
    "metadata": {},
    "source": [
     "## Converting to Ray Serve Deployment\n",
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "worth-criminal",
+   "id": "living-excellence",
    "metadata": {
     "hide-output": false
    },
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "mechanical-greene",
+   "id": "accessory-scene",
    "metadata": {},
    "source": [
     "After these imports, we can include our model code from above.\n",
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "plastic-probe",
+   "id": "identical-lightweight",
    "metadata": {
     "hide-output": false
    },
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "flying-robin",
+   "id": "quantitative-scotland",
    "metadata": {},
    "source": [
     "Ray Serve needs to run on top of a Ray cluster, so we create a local one.\n",
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "short-marking",
+   "id": "still-serve",
    "metadata": {
     "hide-output": false
    },
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "appointed-farming",
+   "id": "marked-enclosure",
    "metadata": {
     "hide-output": false
    },
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "stuck-motel",
+   "id": "anticipated-malta",
    "metadata": {},
    "source": [
     "Now that we have defined our `summarize` function, connected to a Ray\n",
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "furnished-option",
+   "id": "brilliant-minneapolis",
    "metadata": {
     "hide-output": false
    },
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "social-kitty",
+   "id": "wooden-parameter",
    "metadata": {},
    "source": [
     "- In line 1, we add the decorator `@serve.deployment`\n",
@@ -426,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "duplicate-tolerance",
+   "id": "starting-venice",
    "metadata": {
     "hide-output": false
    },
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "chubby-potato",
+   "id": "front-start",
    "metadata": {},
    "source": [
     "Once we deploy `router`, we can query the model over HTTP."
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "special-leader",
+   "id": "warming-wright",
    "metadata": {},
    "source": [
     "## Testing the Ray Serve Deployment\n",
@@ -488,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "latest-sociology",
+   "id": "stable-peter",
    "metadata": {
     "hide-output": false
    },
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "deadly-gates",
+   "id": "above-austria",
    "metadata": {},
    "source": [
     "## Using Classes in the Ray Serve Deployment\n",
@@ -561,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "immediate-attempt",
+   "id": "reduced-candy",
    "metadata": {
     "hide-output": false
    },
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "oriented-boring",
+   "id": "academic-camera",
    "metadata": {},
    "source": [
     "In this configuration, we can query the `Summarizer` class directly.\n",
@@ -627,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "serious-invite",
+   "id": "judicial-federation",
    "metadata": {
     "hide-output": false
    },
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "swedish-breath",
+   "id": "alternate-agriculture",
    "metadata": {},
    "source": [
     "## Adding Functionality with FastAPI\n",
@@ -684,7 +684,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "incorrect-intention",
+   "id": "vital-concert",
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "maritime-amount",
+   "id": "indian-waterproof",
    "metadata": {
     "hide-output": false
    },
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fluid-testing",
+   "id": "wooden-vancouver",
    "metadata": {},
    "source": [
     "The class now exposes the same route but with the following feature:\n",
@@ -782,7 +782,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "efficient-stationery",
+   "id": "signal-nigeria",
    "metadata": {
     "hide-output": false
    },
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hourly-place",
+   "id": "viral-lancaster",
    "metadata": {},
    "source": [
     "Congratulations! You just built and deployed a machine learning model on Ray\n",
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ideal-brain",
+   "id": "atomic-electronics",
    "metadata": {},
    "source": [
     "# 3 Deploying to Cloud Endpoint\n",
@@ -850,32 +850,33 @@
   },
   {
    "cell_type": "markdown",
-   "id": "prepared-going",
+   "id": "gross-broadcasting",
    "metadata": {},
    "source": [
-    "# 4 Bonus: Real World Model Composition\n",
+    "# 4 Bonus: Other Features of Ray Serve\n",
+    "In the tutorial, we demostrated the ability to serve a single model. Ray Serve is much more than that! In order to scale ML model deployments, Serve enables you:\n",
+    "- Scale out to muliple replicas by setting `num_replicas=10` or autoscale. ML models need this because they are typically low throughput.\n",
+    "- Use GPU resource, and multiple them with `ray_actor_options={\"num_gpus\": 0.5}`. You use this to improve utilization of expensive GPUs.\n",
+    "- Rolling upgrade your deployments and rollback in case it fails. You need to for production stability.\n",
     "\n",
-    ".. TODO\n",
+    "![serve features list](serve-features.svg)\n",
     "\n",
-    "\n",
-    "!["
+    "You can learn more about the features of Ray Serve at [rayserve.org](http://rayserve.org/)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "fancy-perfume",
+   "cell_type": "markdown",
+   "id": "piano-quality",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "specified-reform",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 5 Bonus: Real World Model Composition\n",
+    "\n",
+    "As you start to build end-to-end machine learning applications, you will quickly face the fact that models doesn't exist in isolation. To perform an end-to-end task, you have to glue together multiple ML models and steps. Many existing systems doesn't support model composition natively. Ray Serve supports that natively and it is easy to expressive your logic. \n",
+    "\n",
+    "![model-composition](model-composition.svg)\n",
+    "\n",
+    "You can learn more from this [Ray Summit talk](https://www.youtube.com/watch?v=mM4hJLelzSw)."
+   ]
   }
  ],
  "metadata": {
