--- a/ray-serve/e2e/tutorial.ipynb
+++ b/ray-serve/e2e/tutorial.ipynb
@@ -24,9 +24,9 @@
    "source": [
     "# Model Deployment with Ray Serve: Introduction\n",
     "\n",
-    "This tutorial has few goals in mind. \n",
+    "This tutorial has a few goals in mind. \n",
     "\n",
-    "1. Introduce you to the the landscape of ML serving tools, and where does Ray Serve fit.\n",
+    "1. Introduce you to the landscape of ML serving tools, and where does Ray Serve fit.\n",
     "2. Teach you how to deploy any Python based model with Ray Serve, and compose them for production ready pipelines.\n",
     "3. Show you the concrete steps required to deploy models for interactive REST endpoint.\n",
     "\n",
