--- a/ray-serve/e2e/tutorial.ipynb
+++ b/ray-serve/e2e/tutorial.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "This tutorial has a few goals in mind. \n",
     "\n",
-    "1. Introduce you to the landscape of ML serving tools, and where does Ray Serve fit.\n",
+    "1. Introduce you to the landscape of ML serving tools, and where Ray Serve fits in.\n",
     "2. Teach you how to deploy any Python based model with Ray Serve, and compose them for production ready pipelines.\n",
     "3. Show you the concrete steps required to deploy models for interactive REST endpoint.\n",
     "\n",
@@ -40,7 +40,7 @@
    "source": [
     "# 1 Landscape of ML Deployment Tools\n",
     "\n",
-    "Where does Ray Serve fits in the lanscape of machine learning deployment tools? \n",
+    "Where does Ray Serve fit in the lanscape of machine learning deployment tools? \n",
     "\n",
     "Commonly there's a spectrum of tools:\n",
     "- People typically starts with either framework specific servers (TFServing, TorchServer) or web servers (Flask, FastAPI) as an easy start to deploy a single model. \n",
