--- a/ray-serve/e2e/tutorial.ipynb
+++ b/ray-serve/e2e/tutorial.ipynb
@@ -30,7 +30,7 @@
     "2. Teach you how to deploy any Python based model with Ray Serve, and compose them for production ready pipelines.\n",
     "3. Show you the concrete steps required to deploy models for interactive REST endpoint.\n",
     "\n",
-    "If you any question about this tutorial, or any follow up questions, please feel free to ask in the [Ray discussion forum](https://discuss.ray.io/c/ray-serve/6) or [Ray Slack](https://forms.gle/9TSdDYUgxYs8SA9e8)"
+    "If you any questions about this tutorial, or any follow-up questions, please feel free to ask them in the [Ray discussion forum](https://discuss.ray.io/c/ray-serve/6) or [Ray Slack](https://forms.gle/9TSdDYUgxYs8SA9e8)"
    ]
   },
   {
