--- a/ray-serve/e2e/tutorial.ipynb
+++ b/ray-serve/e2e/tutorial.ipynb
@@ -40,7 +40,7 @@
    "source": [
     "# 1 Landscape of ML Deployment Tools\n",
     "\n",
-    "Where does Ray Serve fit in the lanscape of machine learning deployment tools? \n",
+    "Where does Ray Serve fit in the landscape of machine learning deployment tools? \n",
     "\n",
     "Commonly there's a spectrum of tools:\n",
     "- People typically starts with either framework specific servers (TFServing, TorchServer) or web servers (Flask, FastAPI) as an easy start to deploy a single model. \n",
