--- a/ray-rllib/acm_recsys_tutorial_2022/01_anyscale_acm_recsys_tutorial_dryrun_1.ipynb
+++ b/ray-rllib/acm_recsys_tutorial_2022/01_anyscale_acm_recsys_tutorial_dryrun_1.ipynb
@@ -666,7 +666,7 @@
    "outputs": [],
    "source": [
     "# Load the checkpoint from the result folder of your running script\n",
-    "checkpoint = \"saved_runs/bandits/checkpoint_000097\"\n",
+    "checkpoint = \"saved_runs/bandits/checkpoint_000666\"\n",
     "bandit_algo.restore(checkpoint)"
    ]
   },
@@ -1073,6 +1073,8 @@
    "source": [
     "\n",
     "sns.lineplot(data=offline_dqn_df, x=\"training_iteration\", y=\"evaluation/episode_reward_mean\", label=\"Offline_DQN\")\n",
+    "sns.lineplot(data=dqn_df, x=\"training_iteration\", y=\"episode_reward_mean\", label=\"Online_DQN\")\n",
+    "sns.lineplot(data=bandit_df, x=\"training_iteration\", y=\"episode_reward_mean\", label=\"Bandits\")\n",
     "plt.axhline(random_baseline, color=\"red\", linestyle='--', label=\"random baseline\")\n",
     "plt.legend()\n",
     "plt.title('Offline RL vs. Baselines training performance')"
