added viz to notebook

--- a/ray-rllib/acm_recsys_tutorial_2022/01_anyscale_acm_recsys_tutorial_dryrun_1.ipynb
+++ b/ray-rllib/acm_recsys_tutorial_2022/01_anyscale_acm_recsys_tutorial_dryrun_1.ipynb
@@ -10,7 +10,9 @@
     "- [Online RL - Bandits](#bandits) (15 min)\n",
     "- [Online RL - DQN](#dqn) (15 min)\n",
     "- [Break](#break) (5 min)\n",
-    "- [Offline RL](#offline-rl) - (15 min)\n"
+    "- [Offline RL](#offline-rl) - (15 min)\n",
+    "\n",
+    "- slides [Link](https://github.com/anyscale/academy/blob/main/ray-rllib/acm_recsys_tutorial_2022/slides/rllib_acm_recsys_2022_slides.pdf)"
    ]
   },
   {
@@ -46,15 +48,24 @@
     "The environment is <i>Timelimit-based</i>, meaning the termination condition for an episode will be after a fixed number (10) of videos are watched. \n",
     "\n",
     "### Document Model\n",
+    "\n",
+    "<img src=\"./images/document_model.png\" width=\"70%\" />\n",
+    "\n",
     "Documents represent the candidate pool of items that need to be recommended with features sampled in the range [0, 1].  In this tutorial, we use <b>1 single feature \"sweetness\"</b> drawn from a uniform distribution between [0.8, 1.0] to represent \"chocolaty\" items and [0, 0.2] for the \"kaley\" options. \n",
     "- The documents can be different at each step (produced by some \"candidate generation\" process), or fixed throughout the simulation.\n",
     "- The recommendation algorithm observes the D candidate documents.  It then makes a selection (possibly ordered) of k documents and presents them in a \"slate\" to the user. We will focus on **slate size of 1** in this tutorial. \n",
     "\n",
     "### User Model\n",
+    "\n",
+    "<img src=\"./images/user_model.png\" width=\"70%\" />\n",
+    "\n",
     "In RecSim users are representation by a set of features some of which could be latent hidden variables not observed by our recommendation system during live interaction. In this tutorial we assume that a sampled user from the world does not own any observable features like age, gender, etc. and our AI should infer the latent state of the user from its history of interactions in the current session. \n",
     "- The user examines a \"slate\" of recommended items and makes a choice of one item. After making their choice, the user emits an engagement score which indicates how much that user was engaged with that particular item they chose. The agent has to learn to estimate the latent states of the user that shape their choice model in the future. \n",
     "\n",
     "### User Choice\n",
+    "\n",
+    "<img src=\"./images/user_choice_model.png\" width=\"70%\" />\n",
+    "\n",
     "This module controls how a particular user would respond to a set of recommendations and how its latent state would evolve as a function of this interaction. \n",
     "In the environment in this tutorial, engagement is assumed to be a function of two competing phenomenas:\n",
     "-   The love of the user for sweet items ($sweetness(item_t)$)\n",
@@ -239,7 +250,7 @@
    "source": [
     "We can note a couple of things here already:\n",
     "\n",
-    "1. The imediate engagement would be high initially when the sweetest item is suggested for the first time.\n",
+    "1. The immediate engagement would be high initially when the sweetest item is suggested for the first time.\n",
     "2. As we keep recommending the sweetest items, the user satisfaction significantly tampers off and as a result engagement quickly drops.\n",
     "3. Episodes seem to last for 10 timesteps."
    ]
@@ -714,7 +725,7 @@
    "source": [
     "# Solving the problem with RL <a class=\"anchor\" id=\"dqn\"></a>\n",
     "\n",
-    "So far the bandit solution has just converged to the perforamnce of greedy argmax policy. **How can we improve over the random policy baseline** Now let's run the DQN algorithm with $\\gamma = 0.99$. We run this script for 1M enviroenment timesteps till convergence. It will take ~ 1hour to run this training job.\n",
+    "So far the bandit solution has just converged to the perforamnce of greedy argmax policy. **How can we improve over the random policy baseline** Now let's run the DQN algorithm with $\\gamma = 0.99$. We run this script for 1M environment timesteps till convergence. It will take ~ 1hour to run this training job.\n",
     "\n",
     "**Exercise (1 min)** How would you modify the previous config object (`bandit_config`) to train an RL agent to optimize long-term engagement (hint: use `.training()` API)?\n"
    ]
@@ -923,7 +934,7 @@
     "    )\n",
     "```\n",
     "\n",
-    "- (Advanced) configuring the replay buffer to become a dummy buffer. By default RLlib uses a large replay buffer that is useful in online RL but doesn't add much value in the offline case. It is recommended to by-pass this behavior by configuring the replay buffer size to be the same as the dataset sampling size, so that the sampling flow does not get dirupted by the replay buffer behavior.\n",
+    "- (Advanced) configuring the replay buffer to become a dummy buffer. By default RLlib uses a large replay buffer that is useful in online RL but doesn't add much value in the offline case. It is recommended to by-pass this behavior by configuring the replay buffer size to be the same as the dataset sampling size, so that the sampling flow does not get disrupted by the replay buffer behavior.\n",
     "\n",
     "```python\n",
     "    .training(\n",
@@ -1101,7 +1112,7 @@
     "    -  Optimizes imediate reward. \n",
     "- DQN takes long-term reward into account\n",
     "    -  Achieves a policy better than random.\n",
-    "    -  Can become even better than our heuristic based baseline (even_argmax).\n",
+    "    -  Can become even better than our heuristic based baseline (even_argmin).\n",
     "- Offline RL is a viable option that works when we don't have simulators for training\n",
     "    -  Since it doesn't explore freely it won't perform as good as an online RL method. \n",
     "    -  Its performance is bounded to the quality of the dataset.\n"
